fixed layout issue for languages with long header texts

--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -133,7 +133,7 @@ a
   #header-content
     position: relative
     z-index: 999
-    padding-top: 200px
+    padding-top: 150px
     h1
       font-size: 4rem
 
